[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tide = "0.16"
async-std = { version = "1.10", features = ["attributes"] }
sqlx = { version = "0.8", features = [ "runtime-async-std", "postgres", "chrono", "ipnetwork" ] }
chrono = "0.4"
surf = "2.3"
urlencoding = "2.1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }