[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tide = "0.16"
async-std = { version = "1.10", features = ["attributes"] }
sqlx = { version = "0.8", features = [ "runtime-async-std", "postgres", "chrono", "ipnetwork" ] }
chrono = "0.4"
surf = "2.3"
urlencoding = "2.1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
env_logger = "0.10"
totp-rs = "5.5.1"
base32 = "0.4"
qrcode = "0.12"
image = "0.24"
base64 = "0.21"
data-encoding = "2.3"